phase2_Dev/src/objects/Historical_Investigation_Staging__c.object
<CustomObject>
    <fields>
        <fullName>AG1__c</fullName>
        <label>AG1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AG2__c</fullName>
        <label>AG2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AG3__c</fullName>
        <label>AG3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agencies_Involved__c</fullName>
        <formula>IF(OR(AG1__c = &quot;None&quot;,ISBLANK(AG1__c)),&quot;&quot;,AG1__c)  + &quot;;&quot; +   IF(OR(AG2__c = &quot;None&quot;,ISBLANK(AG2__c)),&quot;&quot;,AG2__c) + &quot;;&quot; +   IF(OR(AG3__c = &quot;None&quot;,ISBLANK(AG3__c)),&quot;&quot;,AG3__c)</formula>
        <label>Agencies Involved</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_Date__c</fullName>
        <label>Assign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_Due_Days__c</fullName>
        <label>Corrective Action Due Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cover_Letter_Custom_CC_List__c</fullName>
        <label>Cover Letter Custom CC List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cover_Letter_Custom_From_Name__c</fullName>
        <label>Cover Letter Custom From Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cover_Letter_Custom_From_Title__c</fullName>
        <label>Cover Letter Custom From Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cover_Letter_Custom_Text__c</fullName>
        <label>Cover Letter Custom Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cover_Letter_Custom_To_Name__c</fullName>
        <label>Cover Letter Custom To Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Rule__c</fullName>
        <formula>Intake_Id__c + &apos;|&apos; + Program_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Rule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Text__c</fullName>
        <label>Error Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Filed_with_51A__c</fullName>
        <label>Filed with 51A</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intake_Id__c</fullName>
        <label>Intake Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigation_Number__c</fullName>
        <label>Investigation Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigation_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investigation Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leader_Name__c</fullName>
        <label>Leader Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leader__c</fullName>
        <label>Leader</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Id__c</fullName>
        <label>Program Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_to_51A__c</fullName>
        <label>Related to 51A</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Historical Investigation Staging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Intake_Id__c</columns>
        <columns>Program_Id__c</columns>
        <columns>Investigation_Processed__c</columns>
        <columns>Error_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Id__c</field>
            <operation>equals</operation>
            <value>4904001</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HI-{0000000}</displayFormat>
        <label>Historical Investigation Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Investigation Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>